added simba's image on pet.html

--- a/pet.html
+++ b/pet.html
@@ -19,7 +19,7 @@
             <li>Running around the park</li>
             <li>Going on long drives with the car windows rolled down</li>
             <li>Warm Cuddles</li>
-            <li>long warm baths</li>
+            <li>Long warm baths</li>
         </ol>
         
         
