added favorite foods on pet.html

--- a/pet.html
+++ b/pet.html
@@ -12,6 +12,7 @@
         <ul>
             <li>Meat on Bone</li>
             <li>Doggy Lollipops</li>
+            <li>Cheese</li>
         </ul>
         <h1>Simba's Favorite Activities</h1>
         <p>Below is a list of Simba's fovorite things to do</p>
